# ai-recruitment-flow

./: PROJECT_BRIEF.md  README.md  env.example  package.json
.github/workflows/: ci.yml
apps/api/: env.example  pyproject.toml
apps/api/recruitment_flow_api/: main.py
apps/api/recruitment_flow_api/api/v1/: analytics.py  api.py  auth.py  candidates.py  interviews.py  offers.py  roles.py
apps/api/recruitment_flow_api/core/: config.py  database.py  logging.py  redis.py
apps/web/: .eslintrc.js  env.example  next.config.js  package.json  tailwind.config.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/dashboard/: pipeline-board.tsx  quick-stats.tsx  recent-activity.tsx
apps/web/src/components/layouts/: dashboard-layout.tsx  header.tsx  nav-link.tsx  sidebar.tsx
apps/web/src/components/ui/: badge.tsx  card.tsx
apps/web/src/lib/: utils.ts
docs/: API_SPEC.md  CLAUDE.md  PROMPT_DECLARATION.md  REPO_MAP.md
scripts/: dev.sh
